--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 			<artifactId>jcalendar-1.4</artifactId>
 			<scope>system</scope>
 			<version>1.0</version>
-			<systemPath>${basedir}\src\main\resources\jcalendar-1.4.jar</systemPath>
+			<systemPath>${project.basedir}/src/main/resources/jcalendar-1.4.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
